infra/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yt-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yt-frontend
  template:
    metadata:
      labels:
        app: yt-frontend
    spec:
      containers:
      - name: yt-frontend
        image: vikaskaly/yt-frontend:latest
        ports:
        - containerPort: 3000
