infra/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-frontend-svc
spec:
  type: LoadBalancer
  selector:
    app: yt-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
