infra/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-server-svc
spec:
  type: LoadBalancer
  selector:
    app: yt-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
