infra/yt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: backend.yt.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yt-backend-svc
            port:
              number: 3001
  - host: frontend.yt.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yt-frontend-svc
            port:
              number: 3000
